--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <link rel="icon" href="assets/images/logo.png" alt="Logo" />
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
