--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-beasties-container>
 
-<head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><base href="/web-app/">
+<head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><base href="./">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SplitEasy</title>
